package com.heima.designpatterns.principles.di.diy;

public interface CPU {

    /**
     * cpu 运行
     */
    void run();
}
