package com.heima.designpatterns.principles.di.diy;/**
 * @author: DongShaowei
 * @create: 2024-11-18 21:43
 * @description: 
 */
public class Memory {
}
