package com.heima.designpatterns.principles.di.old;

/**
 * @author: DongShaowei
 * @create: 2024-11-18 21:23
 * @description:
 */
public class IntelCpu {

    public void run() {
        System.out.println(" Intel Cpu is running");
    }
}
