package com.heima.designpatterns.principles.di.old;

/**
 * @author: DongShaowei
 * @create: 2024-11-18 21:23
 * @description:
 */
public class KingstonMemory {

    /**
     * 保存的方法
     */
    public void save() {
        System.out.println("save data by kingston");
    }
}
