@startuml
'https://plantuml.com/class-diagram
Computer *-- Disk
Computer *-- CPU
Computer *-- Memory
Disk <|-- XiJieHardDisk
CPU <|-- IntelCPU
Memory <|-- KingstonMemory


class Computer {
    - hardDisk: Disk
    - cpu: CPU
    - memory: Memory
    + setHardDisk(Disk disk): void
    + getHardDisk(): Disk
    + setCpu(CPU cpu): void
    + getCpu(): CPU
    + setMemory(Memory memory): void
    + getMemory(): Memory
    + run(): void
}

interface Disk {
    + save(String data): void
    + get(): String
}

interface CPU {
    + run(): void
}

interface Memory {
    + save(): void
}


class XiJieHardDisk {
    + save(String data): void
    + get(): String
}

class IntelCPU {
    + run(): void
}

class KingstonMemory {
    + save(): void
}

@enduml